--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,6 +1,6 @@
 .container.contact__container {
   width: 50%;
-  display: grid;
+  /* display: grid; */
   grid-template-columns: 30% 58%;
   gap: 12%;
 }
